--- a/responsive homework/assets/css/style.css
+++ b/responsive homework/assets/css/style.css
@@ -242,7 +242,16 @@ input[type=submit] {
 @media screen and ( max-width: 768px) {
   .main-section {
     width: 90%;
+    margin-right: 20px;
+  }
+  #logo {
+    position: relative;
+    left: 30px;
   }
 }
 
-@media screen and (max-width: 640px) {}
+@media screen and (max-width: 640px) {
+  .work {
+    margin-left: 100px;
+  }
+}
